Tue, 24 Jul 2007 20:40:35 +0200 <thp@perli.net>
        * src/gpodder/libwget.py: Add count() function to downloadStatusManager
        * src/gpodder/gpodder.py: New download_status_updated callback 
          function that updates the caption for the downloads tab to include 
          the number of files currently being downloaded (i.e. "Downloads (2)")
        * data/gpodder.glade: Update label for downloads tab for above changes

Sun, 22 Jul 2007 23:39:50 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Apply patch from Nick (nikosapi) 
          to fix an issue with the wrong python-id3 library being used
          for per-episode cover art
        * bin/gpodder: We're in development again (svn version)

Sat, 21 Jul 2007 12:31:14 +0200 <thp@perli.net>
        * README: ** gPodder 0.9.4 released **
        * doc/man/gpodder.1: Updated manpage for release
        * TODO: Updated TODO list for release
        * bin/gpodder: Pushed version to 0.9.4; new release date
        * data/messages.pot: Re-generated on release
        * data/po/*.po: Re-generated on release

Fri, 20 Jul 2007 20:27:40 +0200 <thp@perli.net>
        * data/gpodder.desktop: Added Ukrainian .desktop file translation 
          by Mykola Nikishov <mn mn.com.ua>
        * data/po/uk.po: Updated Ukrainian translation by Mykola Nikishov
        * bin/gpodder: Pushed version + release date

Thu, 19 Jul 2007 14:38:19 +0200 <thp@perli.net>
        ! Support for HTTP/FTP username/password authentication, mostly 
          written by Nick <nikosapi gmail.com> with some corrections from thp
        * src/gpodder/libwget.py: Refactor wget command line
          generation and add support for HTTP/FTP authentication
        * src/gpodder/liblocdbreader.py: Add support for HTTP/FTP
          authentication by reading username/password from localdb
        * src/gpodder/libpodcasts.py: Password obfuscation, loading
          and saving of passwords; bugfix from Nick (nikosapi gmail.com)